Fix documentation browser resizing behavior
Remove hardcoded dimensions from a few CSS parameters to prevent
layout problems when readers resize their browsers to have a narrower
window.

Set a max-width: 60em on the main content so that text remains
readable on wide browser windows.

(cherry picked from commit bba7ed92a0b9800d9f5fdb14f5f66f755e9d92fa)

ticket: 7503
version_fixed: 1.11
status: resolved

--- a/doc/_static/kerb.css
+++ b/doc/_static/kerb.css
@@ -16,6 +16,9 @@ div.body {
 div.header, div.content, div.footer {
   margin-left: auto;
   margin-right: auto;
+  padding-left: 1em;
+  padding-right: 1em;
+  max-width: 60em;
 }
 
 div.header-wrapper {
@@ -105,6 +108,10 @@ div.sidebar li.toctree-l3.current a {
 
 div.sidebar li.toctree-l4 a {
   display: none;
+}
+
+div.sidebar input[type=text] {
+  width: auto;
 }
 
 /* Other body styles */
